--- a/voting-client/src/style.scss
+++ b/voting-client/src/style.scss
@@ -15,11 +15,27 @@ body {
 }
 
 .vote-pair {
-  height: 100%;
+  height: 85%;
   width: 100%;
   display: flex;
   flex-direction: column;
   user-select: none;
+}
+
+.to-result {
+  height: 15%;
+  display: flex;
+  border-top: 1px solid #aaa;
+
+  a {
+    flex: 1;
+    background-color: black;
+    color: #aaa;
+
+    padding-top: 1rem;
+    text-decoration: none;
+    text-align: center;
+  }
 }
 
 .vote {
@@ -119,14 +135,24 @@ body {
 
 .management {
   display: flex;
-  height: 2em;
-  border-top: 1px solid #aaa;
+  flex-direction: column;
+  height: 4em;
 
-  .next {
+  * {
     border: 0;
+    border-top: 1px solid #aaa;
     background-color: black;
     color: #aaa;
     flex: 1;
+  }
+
+  a {
+    text-align: center;
+    text-decoration: none;
+  }
+
+  button {
+    color: white;
   }
 }
 
